--- a/WTF Flutter/myfirstwtf_app/pubspec.yaml
+++ b/WTF Flutter/myfirstwtf_app/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.3.2
   font_awesome_flutter: ^10.11.0
+  otp_input: ^1.0.4
 
 dev_dependencies:
   flutter_test:
