--- a/flutter_google_maps/android/app/src/main/AndroidManifest.xml
+++ b/flutter_google_maps/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
         android:icon="@mipmap/ic_launcher">
         <!-- TODO: Add your Google Maps API key here -->
         <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="AIzaSyAyurdembKzI4nakYwqSz4UuectA3wTZvM"/>
+               android:value=""/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
